fix edge sponsor logos cut off (https://app.asana.com/0/0/1131766357444839/f)

--- a/web/themes/custom/legacy/css/src/_hack.ie.less
+++ b/web/themes/custom/legacy/css/src/_hack.ie.less
@@ -482,4 +482,7 @@
 .c-CopyrightLine__Logo {
   flex: 0 0 150px;
 }
+.slick-slide .c-SupporterBlock__Logo {
+  max-height: 100%;
+}
 }
