--- a/web/themes/custom/legacy/css/src/_hack.slick.less
+++ b/web/themes/custom/legacy/css/src/_hack.slick.less
@@ -34,7 +34,7 @@
   .c-SupporterBlock__Logo {
     position: absolute;
     top: 50%; left: 50%; transform: translate(-50%, -50%); // HACK for centering the logo
-    max-height: 100%;
+    //max-height: 100%;
     padding-right: .5rem;
     padding-left: .5rem;
   }
